--- a/views/master.html
+++ b/views/master.html
@@ -13,6 +13,7 @@
             <nav id="nav">
                 <a href="/" alt="Home">Home</a>
                 <a href="/what" alt="What?">What is it?</a>
+                <a href="/getstarted" alt="Get Started">Get started</a>
                 <a href="/documentation" alt="Documentation">Documentation</a>
             </nav>
             <div id="content" name="content" active>
