--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,5 @@
 <div id="title">
+    <img src="images/arcane.svg">
     <div style="font-size: 4em">
         Essence
     </div>
@@ -6,7 +7,6 @@
         A new way of developing
     </div>
 </div>
-
 
 <style>
     #title
