--- a/views/home.html
+++ b/views/home.html
@@ -1,10 +1,10 @@
 <div id="title">
-    <img src="images/arcane.svg">
+    <!--img src="images/arcane.svg"-->
     <div style="font-size: 4em">
         Essence
     </div>
     <div>
-        A new way of developing
+        A new way of developing, just as usual.
     </div>
 </div>
 
@@ -15,5 +15,9 @@
         top: 20%;
         left: 20%;
         display: inline-block;
+    }
+    #title svg path
+    {
+        fill: #FFFFFF;
     }
 </style>
