--- a/views/what.html
+++ b/views/what.html
@@ -1,1 +1,12 @@
-What?
+<h1>What is Essence?</h1>
+Essence is a thing that is cool.
+Essence is a thing that is cool.
+Essence is a thing that is cool.
+Essence is a thing that is cool.
+Essence is a thing that is cool.
+Essence is a thing that is cool.
+Essence is a thing that is cool.
+Essence is a thing that is cool.
+Essence is a thing that is cool.
+Essence is a thing that is cool.
+Essence is a thing that is cool.
