--- a/client/style.css
+++ b/client/style.css
@@ -55,7 +55,8 @@ body
 }
 #content
 {
-    margin: 20px;
+    margin: 60px auto;
+    width: 50%;
     height: 100%;
     flex-grow: 1;
     flex-shrink: 1;
