--- a/client/style.css
+++ b/client/style.css
@@ -62,4 +62,22 @@ body
     height: 100%;
     flex-grow: 1;
     flex-shrink: 1;
+    
+    animation-name: slideUp;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration: 0.3s;
+}
+@keyframes slideUp
+{
+    0%
+    {
+        transform: translateY(50px);
+        opacity: 0;
+    }
+    100%
+    {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
